--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@flexure/core",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"description": "Library for App",
 	"source": "src/index.ts",
 	"main": "dist/index.js",
@@ -8,7 +8,7 @@
 	"types": "dist/index.d.ts",
 	"umd:main": "dist/foo.umd.js",
 	"publishConfig": {
-		"registry": "https://npm.pkg.github.com/"
+		"registry": "https://npm.pkg.github.com/@flexure"
 	},
 	"scripts": {
 		"build": "microbundle-crl --no-compress --format modern,cjs --target web",
